Fix atomics for armv5 thumb architectue, move libgcc first.

BUG: 306210